chezmoiignore: add one more check for .agent-bridge.sh

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,4 +1,4 @@
 README.md
-{{- if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+{{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat")) }}
 .agent-bridge.sh
 {{- end }}
