.~ignore: fix logic to account for macOS

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,4 +1,4 @@
 README.md
-{{- if (not (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat"))) }}
+{{- if (not (and (or (eq .chezmoi.os "darwin") (.chezmoi.kernel.osrelease | lower | contains "microsoft")) (lookPath "socat"))) }}
 .agent-bridge.sh
 {{- end }}
